# VerifEval

./: .gitignore  .tbeval.yaml  COMPLETE_PIPELINE_RUN.md  FAQ.md  FINAL_SUMMARY.md  GROUND_TRUTH_SOURCES.md  HOW_SCORING_WORKS.md  PIPELINE_RUN_SUMMARY.md  PIPELINE_STATUS.md  QUICKSTART.md  README.md  README_step5.md  SUCCESS_REPORT.md  SUMMARY.md  VERILATOR_PIPELINE_DEMO.md  requirements.txt  run_eval.py  run_pipeline_adder.py  run_step2.py  run_step2_detailed.py  test_benchmark.py
build_me_verif_for_synchronous_182127/: Makefile  README.md  design_spec.json  gaps_analysis.json  generation_state.json  intent_graph.json  verification_plan.json
build_orchestrate/: __init__.py  __main__.py  config.py  models.py  orchestrator.py
comparison_results/: plain_llm_result.json  verifagent_result.json
docs/: CLI_QUICK_REFERENCE.md  CLI_USAGE.md  CLI_usage5.md  EXAMPLES.md  setup5.py  (+5 more)
tb_classif/: .tbeval.yaml  README.md  __init__.py  ci.yaml  cocotb_detect.py  config.py  models.py  orchestrator.py  pyproject.toml  requirements-dev.txt  requirements.txt  uvm_sv_detect.py
tb_classif/classify_route/: __init__.py  __main__.py  uvm_integration.py
tb_classif/classify_route/cli/: __init__.py
tb_classif/cli/: __init__.py  main.py
tb_classif/detectors/: README.md  __init__.py  base_detect.py  cocotb_detect.py  hdl_detect.py  pyuvm_detect.py  uvm_sv_detect.py  vunit_detect.py
tb_classif/discovery/: __init__.py  file_finder.py  manifest_parser.py
tb_classif/quality_gate/: README.md  __init__.py  base.py  ghdl_checker.py  questa_checker.py  verible_linter.py
tb_classif/quality_gate/rules/: verible_default.rules
tb_classif/routing/: README.md  __init__.py  confidence.py  engine.py  simulator_selector.py
tb_classif/tests/: __init__.py  conf_test.py  test_detectors.py  test_integration.py  test_quality_gate.py  test_routing_engine.py  test_validators.py
tb_classif/utils/: __init__.py  validators.py
(+371 files in other folders)
